# network-archaeology

./: .gitignore  LICENSE  README.md  compile.sh  example_script.py
generators/: CMakeLists.txt  growth
generators/src/: CMakeLists.txt  config.h  config.h.in  gn_gen_model.h  growth_main.cpp  growth_model.h  models.h  types.h
generators/src/structured_models/: bianconi_barabasi.cpp  bianconi_barabasi.h  generalized_gn.cpp  gn.cpp  gn.h
generators/src/unstructured_models/: delayed.cpp  delayed.h
tools/: comparison.py  consistency_check.py  generative_models.py  inference_methods.py  obfuscation.py
tools/bins/: .gitignore  OD  OD.cpp  SMC.py  degree.py  random_sampling_std  snowball.py
tools/bins/importance_sampling_cpp/: CMakeLists.txt  README.md
tools/bins/importance_sampling_cpp/lib/: DynamicNetwork.cpp  DynamicNetwork.hpp  auxiliaryFunctions.cpp  auxiliaryFunctions.hpp
tools/bins/importance_sampling_cpp/src/: random_sampling_std.cpp
